# AMI-STREAMS

./: .gitignore  .pre-commit-config.yaml  FIXME.md  Makefile  README.md  REQUIREMENTS.md  SETUP_CONTRACT.md  SPEC-MATRIX-BOOTSTRAP.md  module_setup.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
config/matrix/: INTEGRATION.md  README.md  element-config.json  homeserver.yaml  matrix.openami.local.signing.key
scripts/: run_tests.py
tests/: __init__.py  test_basic.py
